--- a/twitchtv/index.html
+++ b/twitchtv/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
+  <title>twitch streamers</title>
   <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-  
+  <div id="app">
+    
+  </div>
+
 <script src="js/app.js"></script>
 </body>
 </html>
