--- a/twitchtv/index.html
+++ b/twitchtv/index.html
@@ -6,13 +6,17 @@
   <title>twitch streamers</title>
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-      
+
 </head>
 <body>
-  <div id="app">
-    
+<div class="container-fluid text-center">
+  <h1>twitch stream</h1>
+</div>
+<div class="container">
+    <div id="app">
+    </div>
   </div>
 
-<script src="js/app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
