add basic buttons

--- a/twitchtv/index.html
+++ b/twitchtv/index.html
@@ -9,10 +9,15 @@
 
 </head>
 <body>
-<div class="container-fluid text-center">
-  <h1>twitch stream</h1>
-</div>
-<div class="container">
+  <div class="container-fluid text-center">
+    <h1>twitch stream</h1>
+  </div>
+  <div class="container">
+    <div class="btn_row text-center">
+      <button type="button" class="btn btn-info">All</button>
+      <button type="button" class="btn btn-success">Online</button>
+      <button type="button" class="btn btn-danger">Offline</button>
+    </div>
     <div id="app">
     </div>
   </div>
