add id attributes in button tags

--- a/twitchtv/index.html
+++ b/twitchtv/index.html
@@ -14,9 +14,9 @@
   </div>
   <div class="container">
     <div class="btn_row text-center">
-      <button type="button" class="btn btn-info">All</button>
-      <button type="button" class="btn btn-success">Online</button>
-      <button type="button" class="btn btn-danger">Offline</button>
+      <button type="button" class="btn btn-info" id="btn_all">All</button>
+      <button type="button" class="btn btn-success" id="btn_online">Online</button>
+      <button type="button" class="btn btn-danger" id="btn_offline">Offline</button>
     </div>
     <div id="app">
     </div>
