--- a/twitchtv/index.html
+++ b/twitchtv/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <script src="https://use.fontawesome.com/157fb891d3.js"></script>
 
 </head>
 <body>
@@ -19,10 +20,10 @@
       <button type="button" class="btn btn-success" id="btn_online">Online</button>
       <button type="button" class="btn btn-danger" id="btn_offline">Offline</button>
     </div>
-    <div id="app">
+    <div id="app" class="text-center">
+      <i class="fa fa-spinner fa-5x fa-pulse loading" aria-hidden="true"></i>
     </div>
   </div>
-
   <script src="js/app.js"></script>
 </body>
 </html>
