--- a/twitchtv/index.html
+++ b/twitchtv/index.html
@@ -11,19 +11,31 @@
 
 </head>
 <body>
-  <div class="container-fluid text-center">
-    <h1>twitch stream</h1>
-  </div>
-  <div class="container">
-    <div class="btn_row text-center">
-      <button type="button" class="btn btn-info" id="btn_all">All</button>
-      <button type="button" class="btn btn-success" id="btn_online">Online</button>
-      <button type="button" class="btn btn-danger" id="btn_offline">Offline</button>
+  <div class="main">
+    <div class="container-fluid text-center my-header">
+      <h1>twitch stream</h1>
     </div>
-    <div id="app" class="text-center">
-      <i class="fa fa-spinner fa-5x fa-pulse loading" aria-hidden="true"></i>
+    <div class="container">
+      <div class="btn_row text-center">
+        <button type="button" class="btn btn-info" id="btn_all">All</button>
+        <button type="button" class="btn btn-success" id="btn_online">Online</button>
+        <button type="button" class="btn btn-danger" id="btn_offline">Offline</button>
+        <button type="button" class="btn btn-warning" id="btn_errors">Errors</button>
+      </div>
+      <hr/>
+      <div id="app" class="text-center">
+        <i class="fa fa-spinner fa-5x fa-pulse loading" aria-hidden="true"></i>
+      </div>
+
     </div>
+
   </div>
+
+  <footer class="text-center">
+  <p>
+    &copy; <a href="https://www.freecodecamp.com/maccorzo">maccorzo</a>
+  </p>
+  </footer>
   <script src="js/app.js"></script>
 </body>
 </html>
